--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/var-dumper": "^6.4"
+        "altorouter/altorouter": "^2.0",
+        "symfony/var-dumper": "^5.4"
     }
 }
